# Quantum-Adder

./: .gitignore  LICENCE  README.md  adder.ipynb  adder_corrected_all_gates.ipynb  adder_corrected_end.ipynb  adder_transversal.ipynb  common.py  constants.py  gates.py  miscellaneous.ipynb  pyproject.toml  requirements.txt
notebooks/: adder.ipynb  corrected_all.ipynb  corrected_end.ipynb  miscellaneous.ipynb  testing.ipynb  transversal.ipynb
notebooks/helpers/: common.py  constants.py  gates.py
report/: report.tex
