
[project]

name = "quantum_adder"
version = "1.0.0"
description = "Error corrected quantum adder written using qiskit for a college quantum information class"

license = { file = "LICENCE" }
authors = [{ name = "Punit Turlapati", email = "punitsst@gmail.com" }]

requires-python = ">=3.9"
dependencies = [
    "qiskit",
    "qiskit-aer",
    "python-dotenv",
    "matplotlib",
    "jupyter",
    "pylatexenc",
]

[project.optional-dependencies]
dev = ["ruff"]
